--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
-PyQt6
-scapy
+PyQt6>=6.0.0    # GUI framework
+scapy>=2.5.0     # Network packet manipulation
+python-json-logger>=2.0.0  # JSON logging support
